--- a/source/masters/GentiumPlusMaster-Regular.ufo/fontinfo.plist
+++ b/source/masters/GentiumPlusMaster-Regular.ufo/fontinfo.plist
@@ -11,7 +11,7 @@
   <key>descender</key>
   <integer>-750</integer>
   <key>familyName</key>
-  <string>Gentium Plus Master</string>
+  <string>Gentium Plus WSP</string>
   <key>openTypeHeadCreated</key>
   <string>2021/07/12 22:01:26</string>
   <key>openTypeHheaAscender</key>
@@ -77,13 +77,13 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>openTypeNameManufacturerURL</key>
   <string>http://www.sil.org/</string>
   <key>openTypeNamePreferredFamilyName</key>
-  <string>Gentium Plus Master</string>
+  <string>Gentium Plus WSP</string>
   <key>openTypeNamePreferredSubfamilyName</key>
   <string>Regular</string>
   <key>openTypeNameUniqueID</key>
-  <string>SIL International: Gentium Plus Master Regular: 2021</string>
+  <string>SIL International: Gentium Plus WSP Regular: 2021</string>
   <key>openTypeNameVersion</key>
-  <string>Version 6.001</string>
+  <string>Version 6.050</string>
   <key>openTypeOS2CodePageRanges</key>
   <array>
     <integer>0</integer>
@@ -195,9 +195,9 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
     <integer>1320</integer>
   </array>
   <key>postscriptFontName</key>
-  <string>GentiumPlusMaster</string>
+  <string>GentiumPlusWSP-Regular</string>
   <key>postscriptFullName</key>
-  <string>Gentium Plus Master Regular</string>
+  <string>Gentium Plus WSP Regular</string>
   <key>postscriptOtherBlues</key>
   <array>
     <integer>-500</integer>
@@ -220,7 +220,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>postscriptUnderlineThickness</key>
   <integer>100</integer>
   <key>styleMapFamilyName</key>
-  <string>Gentium Plus</string>
+  <string>Gentium Plus WSP</string>
   <key>styleMapStyleName</key>
   <string>regular</string>
   <key>styleName</key>
@@ -232,7 +232,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>versionMajor</key>
   <integer>6</integer>
   <key>versionMinor</key>
-  <integer>1</integer>
+  <integer>50</integer>
   <key>xHeight</key>
   <integer>930</integer>
 </dict>
